# ArcGIS-with-open-source

./: .env  01_upload_shp_to_arcgis_online.ipynb  pyproject.toml  readme.md  requirements.txt
