[project]
name = "arcgis-with-opensource"
version = "0.1.0"
description = "This is the simple demo of how to integrate arcgis with open source"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arcgis>=2.4.1.1",
    "arcgis-mapping>=4.31.0",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.1",
]
